Fixed: Signature display wrapping

--- a/.css/squert.css
+++ b/.css/squert.css
@@ -482,6 +482,8 @@ background-color:#fafafa;
 font-weight:400;
 font-size:10pt;
 word-wrap:break-word;
+word-break:break-all;
+display:inline-block;
 border-bottom:1pt solid #e9e9e9;
 padding:10px;
 }
@@ -1500,7 +1502,6 @@ height:15px;
 font-size:0px;
 border:1pt solid #545454;
 border-radius:2px;
-margin-right:-5px;
 }
 .pr1 {
 background-color:red;
